# codex-remote-gateway

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  build.rs  config.example.toml  todolist.md
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml
docs/: agent-manager-mvp-plan.md  ai-gateway-anthropic-cache-control.zh-CN.md  ai-gateway-anthropic-messages.zh-CN.md  ai-gateway-anthropic-streaming-glm-buffering.zh-CN.md  ai-gateway-architecture.zh-CN.md  ai-gateway-compact-v2-portable-summary.zh-CN.md  ai-gateway-encrypted-content-scope.zh-CN.md  ai-gateway-glm-anthropic-integration.zh-CN.md  ai-gateway-grok-build-protocol-conversion-reference.zh-CN.md  ai-gateway-grok-responses-tools.zh-CN.md  ai-gateway-image-generation-5.5-5.6.zh-CN.md  ai-gateway-impl.zh-CN.md  ai-gateway-provider-adapter-design.zh-CN.md  ai-gateway-provider-private-state-conversion.zh-CN.md  ai-gateway-responses-lite-web-search.zh-CN.md  ai-gateway-web-search-protocol.zh-CN.md  architecture.md  auth-notes.md  auth-notes.zh-CN.md  codex-app-2007-retro-theme.zh-CN.md  codex-app-cdp-model-diagnostics.zh-CN.md  codex-app-enhanced-language-debugging-postmortem.zh-CN.md  codex-app-fast-startup-statsig.zh-CN.md  codex-app-offline-plugins-plan.md  codex-app-web-run-model-visibility-tradeoff.zh-CN.md  configuration.md  desktop-tray-auto-update-plan.zh-CN.md  im-remote-control-stream-isolation.zh-CN.md  macos-signing.md  provider-logo-assets.zh-CN.md  release-checklist.md  remote-control-protocol-audit.zh-CN.md  rename-codexhub.zh-CN.md  step1-tree-ctrl-verification.md  telegram-integration-plan.zh-CN.md  troubleshooting.md  ui-redesign-dark-mode.zh-CN.md  wxdragon-sync-and-resource-optimization-plan.zh-CN.md
docs/mockups/: codexhub-2007-theme.html
electron-ui/: index.html  package-lock.json  package.json  vite.config.ts
electron-ui/electron/: main.cjs  preload.cjs
electron-ui/scripts/: start-electron-dev.cjs
electron-ui/src/: App.tsx  api.ts  styles.css  types.ts  vite-env.d.ts
packaging/brand/: LICENSE.lucide-icons
packaging/brand/providers/: SOURCES.md
packaging/linux/: codexhub.desktop
packaging/macos/: Info.plist  entitlements.plist
packaging/windows/: CodexHub.wxs  codex-remote-gui.exe.manifest  codex-remote-gui.rc  codexhub.exe.manifest
scripts/: build-macos-app.sh  codex-app-cdp-diagnostics.mjs  codex-app-cdp-model-visibility-experiment.mjs  sign-notarize-macos-app.sh  start-codex-app-cdp-diagnostics.ps1
src/: ai_gateway.rs  app_state.rs  bridge.rs  chain_log.rs  cli.rs  codex.rs  codex_app_config.rs  codex_app_enhanced.rs  codex_app_server_proxy.rs  config.rs  daemon_process.rs  diagnostics_export.rs  electron_gui.rs  feishu.rs  gui.rs  im_runtime.rs  main.rs  outbound_http.rs  relay_backend.rs  remote_control_backend.rs  renderer.rs  shim.rs  store.rs  types.rs  vscode_extension_patch.rs  web.rs
src/ai_gateway/: apply_patch_tool.rs  catalog.rs  config.rs  context.rs  encrypted_content.rs  handler.rs  ir.rs  model.rs  models.json  request_log.rs  responses_compat.rs  responses_lite_tools.rs  router.rs  routing_state.rs  tool_names.rs
src/ai_gateway/codec/: mod.rs  responses_inbound.rs
src/ai_gateway/providers/: anthropic_messages.rs  deepseek_chat.rs  mod.rs  openai_alpha_search.rs  openai_images.rs  openai_responses.rs
src/ai_gateway/transform/: chat_to_responses.rs  responses_stream.rs  responses_to_chat.rs
src/gui/: ai_gateway.rs  api.rs  codex_tab.rs  controls.rs  daemon.rs  im_accounts.rs  onboarding.rs  provider.rs  request_log_detail.rs  request_logs.rs  session_history.rs  text.rs  theme.rs  tray.rs  update.rs  widgets.rs
src/im/: events.rs  mod.rs
src/im/core/: accounts.rs  active.rs  approval.rs  approval_state.rs  attachments.rs  desktop.rs  i18n.rs  media.rs  mod.rs  outbound.rs  remote.rs  routing.rs  runtime.rs  session.rs  settings.rs  text_adapter.rs  text_renderer.rs  thread.rs  thread_list.rs  traits.rs  turn.rs  types.rs
src/im/feishu/: adapter.rs  api.rs  errors.rs  flow.rs  mod.rs  renderer.rs  runtime.rs  types.rs  ws.rs
src/im/telegram/: adapter.rs  api.rs  flow.rs  mod.rs  polling.rs  types.rs
src/im/wechat/: adapter.rs  api.rs  flow.rs  polling.rs  store.rs
src/im/wecom/: adapter.rs  api.rs  (+5 more)
src/remote_control_backend/: auth_tokens.rs  client_state.rs  clients.rs  compatibility.rs  diagnostics.rs  enrollment.rs  log_format.rs  outbound.rs  protocol.rs  recovery.rs  server_envelopes.rs  server_messages.rs  server_work.rs  session_api.rs  status.rs  tests.rs  utils.rs  websocket.rs
src/web/: codex_app.rs  im_api.rs  index.html  onboarding.rs  plugins.rs
(+47 files in other folders)
