[package]
name = "codex-remote"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
futures-util = "0.3"
image = { version = "0.25.10", default-features = false, features = ["png"], optional = true }
mime_guess = "2"
once_cell = "1"
prost = "0.13"
qrcode = "0.14"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
toml_edit = "0.22"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
wxdragon = { version = "0.9.16", optional = true }

[build-dependencies]
embed-resource = "3.0.6"

[features]
gui = ["dep:image", "dep:wxdragon", "reqwest/blocking"]

[[bin]]
name = "codex-remote-gui"
path = "src/bin/codex-remote-gui.rs"
required-features = ["gui"]
